--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
   <script src="js/core/break_eternity.min.js" defer></script>
   <script src="js/core/player.js" defer></script>
   <script src="js/utils/format.js" defer></script>
-  <script src="js/index.js" defer></script>
+  <script src="js/interface/update-atom-count.js" defer></script>
+  <script src="js/interface/update-atom-forge-ui.js" defer></script>
   <script src="js/core/loop.js" defer></script>
   <title>Atom Incremental</title>
 </head>
@@ -35,14 +36,19 @@
     <div>
       <div class="odd:bg-neutral-800 px-2 py-1 grid grid-cols-[1fr_auto_1fr]">
         <div>
-          <span class="text-white">Tier 1 Atom Forge</span>
+          <div>
+            <span class="text-white">Tier 1 Atom Forge</span>
+            <span id="tier-1-atom-forge-a" class="text-white">×~ (~)</span>
+          </div>
+          <span id="tier-1-atom-forge-b" class="text-white">Forging ~ Atoms/s</span>
         </div>
         <div class="w-full grid place-items-center">
           <span class="text-white">~</span>
         </div>
-        <button class="ml-auto py-2 w-20 border-[1px] rounded-md grid place-items-center" style="border-color: gray;">
+        <button id="tier-1-atom-forge-btn"
+          class="ml-auto py-2 w-[150px] border-[2px] rounded-md grid place-items-center">
           <div class="grid grid-cols-[max-content_max-content] gap-1 place-items-center">
-            <span class="text-white">~</span>
+            <span id="tier-1-atom-forge-c" class="text-white">~</span>
             <span class="text-white">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
