--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,18 @@
     <div>
       <div class="odd:bg-neutral-800 px-2 py-1 grid grid-cols-[1fr_auto_1fr]">
         <div>
-          <div>
+          <div class="grid grid-flow-col gap-1 place-items-center w-max">
+            <span class="text-gray-500">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                class="lucide lucide-orbit">
+                <circle cx="12" cy="12" r="3" />
+                <circle cx="19" cy="5" r="2" />
+                <circle cx="5" cy="19" r="2" />
+                <path d="M10.4 21.9a10 10 0 0 0 9.941-15.416" />
+                <path d="M13.5 2.1a10 10 0 0 0-9.841 15.416" />
+              </svg>
+            </span>
             <span class="text-white">Tier 1 Atom Forge</span>
             <span id="tier-1-atom-forge-a" class="text-white">×~ (~)</span>
           </div>
