--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <script src="js/interface/render-atom-forge-ui.js" defer></script>
   <script src="js/interface/update-atom-forge-ui.js" defer></script>
   <script src="js/interface/handle-atom-forge-buy.js" defer></script>
+  <script src="js/atom/run-atom-forge.js" defer></script>
   <script src="js/core/onload.js" defer></script>
   <script src="js/core/loop.js" defer></script>
   <title>Atom Incremental</title>
