--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
   <div id="sidebar-icon-container" class="absolute z-[20] top-0 left-0">
     <button id="sidebar-icon-btn">
       <span class="text-white">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none"
           stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
           class="lucide lucide-menu">
           <line x1="4" x2="20" y1="12" y2="12" />
@@ -64,11 +64,12 @@
     </button>
   </div>
   <div id="sidebar-container"
-    class="absolute z-[20] top-0 left-0 h-screen bg-neutral-950 transition w-[80%] sm:w-[300px]">
-    <div id="sidebar-content-container">
-      <div id="sidebar-title-container">
-        <p class="text-white">menu</p>
-        <button id="sidebar-close-btn">
+    class="absolute z-[20] top-0 left-0 h-screen p-2 bg-neutral-950 transition w-[80%] sm:w-[300px]"
+    style="transform: translateX(-100%);">
+    <div>
+      <div class="grid grid-flow-col place-items-center">
+        <p class="text-white mr-auto text-2xl">menu</p>
+        <button id="sidebar-close-btn" class="ml-auto">
           <span class="text-white">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
               stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -79,12 +80,14 @@
           </span>
         </button>
       </div>
-      <button id="switch-to-page-main">
-        <p class="text-white">page main</p>
-      </button>
-      <button id="switch-to-page-settings">
-        <p class="text-white">settings</p>
-      </button>
+      <div class="grid grid-flow-row gap-1">
+        <button id="switch-to-page-main" class="mr-auto transition cursor-pointer text-gray-500 hover:text-white">
+          <span>page main</span>
+        </button>
+        <button id="switch-to-page-settings" class="mr-auto transition cursor-pointer text-gray-500 hover:text-white">
+          <span>settings</span>
+        </button>
+      </div>
     </div>
 </body>
 
