--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,9 @@
 </head>
 
 <body class="bg-neutral-950" dir="ltr">
-  <div id="toast-container" class="fixed left-1/2 transform -translate-x-1/2 w-[300px] z-[30]"></div>
+  <div id="toast-container"
+    class="fixed left-1/2 transform -translate-x-1/2 w-[300px] z-[30] grid grid-flow-row gap-2 mt-2">
+  </div>
   <div id="page-main" class="page" style="display: block;">
     <div class="grid grid-flow-row w-full gap-2">
       <div class="w-max mx-auto mt-2">
