--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
     </button>
   </div>
   <div id="sidebar-container"
-    class="absolute z-[20] top-0 left-0 h-screen p-2 bg-neutral-950 transition w-[80%] sm:w-[300px]"
+    class="absolute z-[20] top-0 left-0 h-screen p-4 bg-neutral-950 duration-300 ease-in-out w-[80%] sm:w-[300px] border-border border-r-[1px]"
     style="transform: translateX(-100%);">
     <div>
       <div class="grid grid-flow-col place-items-center">
