--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,24 @@
   <div id="toast-container"
     class="fixed left-1/2 transform -translate-x-1/2 w-[300px] z-[30] grid grid-flow-row gap-2 mt-2">
   </div>
-  <div id="page-main" class="page" style="display: block;">
-    <div class="grid grid-flow-row w-full gap-2">
-      <div class="w-max mx-auto mt-2">
+  <nav class="top-0 fixed w-screen bg-glass backdrop-blur border-b-[1px] border-border">
+    <div class="grid grid-cols-[1fr_auto_1fr] h-max place-items-center p-1">
+      <div id="sidebar-icon-container" class="mr-auto">
+        <button id="sidebar-icon-btn" class="grid place-items-center">
+          <span class="text-white">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              class="lucide lucide-menu">
+              <line x1="4" x2="20" y1="12" y2="12" />
+              <line x1="4" x2="20" y1="6" y2="6" />
+              <line x1="4" x2="20" y1="18" y2="18" />
+            </svg>
+          </span>
+        </button>
+      </div>
+      <div class="w-max mx-auto">
         <div class="grid grid-flow-col place-items-center gap-1">
-          <span id="atom-count" class="text-white text-4xl font-bold">~</span>
+          <span id="atom-count" class="text-white text-3xl font-bold">~</span>
           <span class="text-white">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none"
               stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -49,6 +62,10 @@
           </span>
         </div>
       </div>
+    </div>
+  </nav>
+  <div id="page-main" class="page" style="display: block;">
+    <div class="grid grid-flow-row w-full gap-2">
       <div id="atom-forges-container" class="grid grid-flow-row"></div>
     </div>
   </div>
@@ -68,19 +85,6 @@
   </div>
   <div id="sidebar-shown-overlay" class="absolute z-[10] top-0 left-0 w-screen h-screen bg-black/50"
     style="display: none;"></div>
-  <div id="sidebar-icon-container" class="absolute z-[20] top-0 left-0">
-    <button id="sidebar-icon-btn">
-      <span class="text-white">
-        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none"
-          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-          class="lucide lucide-menu">
-          <line x1="4" x2="20" y1="12" y2="12" />
-          <line x1="4" x2="20" y1="6" y2="6" />
-          <line x1="4" x2="20" y1="18" y2="18" />
-        </svg>
-      </span>
-    </button>
-  </div>
   <div id="sidebar-container"
     class="absolute z-[20] top-0 left-0 h-screen p-4 bg-neutral-950 duration-300 ease-in-out w-[80%] sm:w-[300px] border-border border-r-[1px]"
     style="transform: translateX(-100%);">
