--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   <script src="js/interface/render-atom-forge-ui.js" defer></script>
   <script src="js/interface/update-atom-forge-ui.js" defer></script>
   <script src="js/interface/handle-atom-forge-buy.js" defer></script>
+  <script src="js/interface/navbar.js" defer></script>
   <script src="js/interface/sidebar.js" defer></script>
   <script src="js/interface/handle-save-logic.js" defer></script>
   <!-- * -->
@@ -31,7 +32,7 @@
   <div id="toast-container"
     class="fixed left-1/2 transform -translate-x-1/2 w-[300px] z-[30] grid grid-flow-row gap-2 mt-2">
   </div>
-  <nav class="top-0 fixed w-screen bg-glass backdrop-blur border-b-[1px] border-border">
+  <nav id="navbar" class="top-0 fixed w-screen duration-200 ease-in-out border-border">
     <div class="grid grid-cols-[1fr_auto_1fr] h-max place-items-center p-1">
       <div id="sidebar-icon-container" class="mr-auto">
         <button id="sidebar-icon-btn" class="grid place-items-center">
